# DBSBM

./: .aider.ignore  .coverage  .dockerignore  .gitignore  .htaccess  .pre-commit-config.yaml  BLUEHOST_DEPLOYMENT_GUIDE.md  BLUEHOST_README.md  BLUEHOST_SUMMARY.md  BOT_FREEZING_FIXES.md  CLEANUP_EXECUTION_SUMMARY.md  CLEANUP_QUICK_REFERENCE.md  CLEANUP_README.md  CLEANUP_SUMMARY.md  COMMUNITY_DISABLED_SUMMARY.md  COMMUNITY_ENGAGEMENT_IMPLEMENTATION_SUMMARY.md  COMMUNITY_ENGAGEMENT_PROMOTION_PLAN.md  COMMUNITY_ENGAGEMENT_STRATEGIES.md  COMMUNITY_ENGAGEMENT_STRATEGIES_REVISED.md  COMMUNITY_ENGAGEMENT_STRATEGIES_UPDATED.md  COMPLETE_SYSTEM_CLEANUP_FINAL_REPORT.md  COMPREHENSIVE_SYSTEM_AUDIT_AND_CLEANUP_REPORT.md  COMPREHENSIVE_SYSTEM_AUDIT_REPORT.md  CONTINUATION_PLAN.md  CONTRIBUTING.md  CRITICAL_TASKS_COMPLETED.md  DBSBM_AUDIT_SUMMARY.md  DBSBM_COMPREHENSIVE_AUDIT_REPORT.md  DBSBM_TASK_LIST.md  DBSBM_TASK_LIST_IMPLEMENTATION.md  DEPLOYMENT_READINESS_REPORT.md  DISCORD_CONNECTION_TROUBLESHOOTING.md  DOCKER_README.md  Dockerfile  EXPERIMENTAL_SYSTEMS_IMPLEMENTATION_SUMMARY.md  FINAL_CLEANUP_SUMMARY.md  LICENSE  LOGGING_REDUCTION_GUIDE.md  MAIN_CHAT_CHANNEL_SETUP_SUMMARY.md  MANUAL_KILL_COMMANDS.md  (+142 more)
TEMP/: bets_csv_20250721_132309_11.csv
audit_reports/: BLACK_FORMATTING_SUMMARY.md  COMPREHENSIVE_SYSTEM_AUDIT_REPORT.md  FETCHER_IMPORT_FIX.md  FETCHER_MAIN_EXECUTION_FIX.md  FINAL_TEST_RESULTS_100_PERCENT.md  PERFORMANCE_SCALABILITY_AUDIT.md  PRODUCTION_CRASH_FIX.md  PRODUCTION_DEPLOYMENT_NEEDED.md  PRODUCTION_FILE_NOT_UPDATED.md  SECURITY_AUDIT_DETAILED.md  (+1 more)
bot/: fetcher.py  (+32 more)
(+1142 files in other folders)
